letter spacing fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ h1 {
   font-size: 24vh;
   line-height: 75%;
   text-transform: uppercase;
-  letter-spacing: -0.2rem;
+  letter-spacing: -0.02em;
   margin-right: 4.8rem;
   //   text-align: center;
 }
